# agent-memory-core

./: .gitignore  AGENT_MEMORY_CORE_AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  MEMORY.md  README.md  demo_commands.ps1  demo_script.md  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
benchmarks/: README.md  memory_recall_cases.json  run_memory_benchmark.py
docs/: ACCEPTANCE.md  AGENT_INTEGRATION.md  API_REFERENCE.md  ARCHITECTURE.md  ROADMAP.md  SECURITY_AND_PRIVACY.md  demo_screenshots.md
examples/: agent_context_injection_demo.py  basic_usage.py  chroma_usage.py  conflict_resolution_demo.py  context_injection_demo.py  delete_disable_demo.py  graph_memory_demo.py  history_timeline_demo.py  openai_compatible_embedding_usage.py  project_isolation_demo.py
examples/web_demo/: app.py
integrations/langgraph/: README.md
integrations/llamaindex/: README.md
integrations/mcp/: README.md  memory_mcp_server.py
memory_core/: README.md  __init__.py  auditor.py  chroma_store.py  cli.py  embeddings.py  models.py  rag_system.py  vector_store.py
scripts/: record_cli_demo.py
tests/: test_CHROMA_BACKEND_OPTIONAL.py  test_MCP_SERVER_OPTIONAL.py  test_MEMORY_CORE_CLI_BENCHMARK.py  test_MEMORY_CORE_HISTORY_TRACE_GRAPH.py  test_MEMORY_CORE_RAG_ACCEPTANCE.py  test_OPENAI_COMPATIBLE_EMBEDDING_PROVIDER.py
